# ai_pre_refinement_engine___evidence_based_quality_assurance_v1_crewai-project

./: .gitignore  CHANGES.md  README.md  pyproject.toml  test_repo_access.py
src/ai_pre_refinement_engine___evidence_based_quality_assurance/: crew.py  main.py
src/ai_pre_refinement_engine___evidence_based_quality_assurance/config/: agents.yaml  tasks.yaml
src/ai_pre_refinement_engine___evidence_based_quality_assurance/tools/: gitlab_file_reader.py  gitlab_file_tree_tool.py  gitlab_get_file.py  gitlab_issue_list_tool.py  gitlab_list_group_projects.py  gitlab_list_issues.py  gitlab_list_merge_requests.py  gitlab_mr_list_tool.py  gitlab_repo_search_tool.py  gitlab_repo_tree_lister.py  gitlab_search.py
