[project]
name = "ai_pre_refinement_engine___evidence_based_quality_assurance"
version = "0.1.0"
description = "ai_pre_refinement_engine___evidence_based_quality_assurance using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
]

[project.scripts]
ai_pre_refinement_engine___evidence_based_quality_assurance = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:run"
run_crew = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:run"
train = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:train"
replay = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:replay"
test = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:test"
run_with_trigger = "ai_pre_refinement_engine___evidence_based_quality_assurance.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
